# backmap

./: .buildinfo  .gitattributes  .gitignore  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  PDBparser.py  PeptideBuilder.py  README.md  README.md.v2  README.rst  StructureBuilder.py  Untitled Document 1  authors_link.html  color_codes.tex  compare.vmd  compare_template.vmd  deme.eps  deme.txt  deme2  genindex.html  index.html  justfile  notebooks.html  objects.inv  phi_psi_to_r.eps  phi_psi_to_r_colorbar.eps  phi_psi_to_r_signed.eps  phi_psi_to_r_signed_colorbar.eps  phi_psi_to_r_ss.eps  phi_psi_to_r_ss_colorbar.eps  plotmap.py  py-modindex.html  pyproject.toml  readme_link.html  reference.html  search.html  (+12 more)
.eggs/python_version-0.0.2-py3.6.egg/EGG-INFO/: RECORD
.eggs/setuptools_scm-1.17.0-py2.7.egg/EGG-INFO/: DESCRIPTION.rst  entry_points.txt
.eggs/setuptools_scm-1.17.0-py3.6.egg/EGG-INFO/: PKG-INFO  RECORD  metadata.json
.eggs/setuptools_scm-2.0.0-py3.6.egg/EGG-INFO/: PKG-INFO  RECORD  entry_points.txt
.eggs/setuptools_scm-3.1.0-py2.7.egg/EGG-INFO/: RECORD
.github/workflows/: SphinxBuild.yml
_modules/: index.html  re.html
_modules/backmap/: backmap.html  cli.html  local_colormaps.html  utils.html
_sources/: authors_link.rst.txt  index.rst.txt  notebooks.rst.txt  reference.rst.txt
_sources/notebooks/: download.nblink.txt  proof.nblink.txt
backmap/: __init__.py  __main__.py  _version.py
backmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Makefile  conf.py  index.md  index.rst  installation.md  installed.txt  notebooks.rst  readme_link.rst  reference.rst  requirements.txt  usage.md
docs/_build/doctrees/: authors.doctree  changes.doctree  index.doctree  license.doctree
docs/_build/html/: .buildinfo  authors.html  changes.html  genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js
docs/notebooks/: examples.nblink
example_pdbs/reports/: 1a19.aa.tex  1a19.aa_chain_A.rcode.eps.colorbar.eps  1lui.tex  1lui_chain_.rcode.eps  1lui_chain_.rcode.his.eps  2eu0.tex  2eu0_chain_.rcode.eps  2eu0_chain_.rcode.his.eps  2m6t.tex  2mx4.tex  2mx4_chain_.rcode.eps  2mx4_chain_.rcode.eps.colorbar.eps  2mx4_chain_.rcode.his.eps  2mx4_chain_.rcode.rmsf.eps  class_a_alpha_1MBA.tex  class_a_alpha_1MBA_chain_.rcode.eps  class_a_alpha_1MBA_chain_.rcode.eps.colorbar.eps  class_a_alpha_1MBA_chain_.rcode.his.eps  class_a_alpha_1MBA_chain_.rcode.rmsf.eps  class_a_alpha_1MBA_chain_A.rcode.eps  class_a_alpha_1MBA_chain_A.rcode.eps.colorbar.eps  class_a_alpha_1MBA_chain_A.rcode.his.eps  class_c_a_plus_b_2ACY.tex  class_c_a_plus_b_2ACY_chain_.rcode.eps  class_c_a_plus_b_2ACY_chain_.rcode.his.eps  class_c_a_plus_b_2ACY_chain_.rcode.his.eps.colorbar.eps  class_c_a_plus_b_2ACY_chain_.rcode.rmsf.eps  class_c_a_plus_b_2ACY_chain_.rcode.rmsf.eps.colorbar.eps  class_c_a_plus_b_2ACY_chain_A.rcode.eps  class_c_a_plus_b_2ACY_chain_A.rcode.his.eps  nanosheet_birth_D14_D15.tex  nanosheet_birth_D14_D15_chain_D14.rcode.eps  nanosheet_birth_D14_D15_chain_D14.rcode.his.eps  nanosheet_birth_D14_D15_chain_D14.rcode.his.eps.colorbar.eps  nanosheet_birth_D14_D15_chain_D14.rcode.rmsf.eps  nanosheet_birth_D14_D15_chain_D14.rcode.rmsf.eps.colorbar.eps  nanosheet_birth_D14_D15_chain_D15.rcode.eps  nanosheet_birth_D14_D15_chain_D15.rcode.his.eps  nanosheet_birth_D14_D15_chain_D15.rcode.rmsf.eps  nanosheet_birth_D14_D15_chain_X.rcode.eps  (+6 more)
examples/: backmap_example.ipynb
local_imports/: Geometry.py  PeptideBuilder.py  draw_structure.tcl  study_handedness.tcl  study_handedness_cis.tcl  study_handedness_cis.vmd
manuscript/: .~lock.cover_letter.doc#  all.bib  plotmap.tex  wlpeerj.bst
manuscript/manuscript/: all.bib  backmap.tex  compileme.py  cover_letter.doc  make_uploadable_doc.py  plotmap.aux  plotmap.blg  plotmap.out  plotmap.tex  tmp.tex
manuscript/manuscript/automated_figures/: .directory  pdb_1xqq_his.eps  pdb_1xqq_r_Chirality.eps  pdb_1xqq_r_Greys.eps  pdb_1xqq_r_SecondaryStructure.eps  pdb_1xqq_rmsd.eps  pdb_1xqq_rmsf.eps  pdb_2fft_his.eps  pdb_2fft_r_Chirality.eps  pdb_2fft_r_Greys.eps  pdb_2fft_r_SecondaryStructure.eps  pdb_2fft_rmsd.eps  pdb_2fft_rmsf.eps
manuscript/manuscript/figures/: .directory
manuscript/manuscript/for_upload/: backmap.aux  backmap.blg  backmap.out  backmap.tex  runme.py  wlpeerj.cls
manuscript/python_generators/: README  README.md  backmap_example.py  example_1xqq_rmsf.eps  example_2fft_rmsf.eps  old_code.py  plotmap.py  plotmap.py.old  plotmap.py.old2  study_number_properties.py  study_sequence_motifs.py
manuscript/python_generators/local_imports/: data_detailed.csv  data_length.csv  draw_structure.vmd  locallib.py  olddata_sequence_motifs.csv  pdfs.py  study_handedness.vmd
motif_studies/window1_index0/: _.eps
motif_studies/window1_index0/_/: A.eps  C.eps  D.eps  E.eps  F.eps  G.eps  H.eps  I.eps  K.eps  L.eps  M.eps  N.eps  P.eps  Q.eps  R.eps  S.eps  T.eps  V.eps  W.eps  Y.eps
motif_studies/window2_index0/: _..eps  _A.eps  _C.eps  _D.eps  _E.eps  _F.eps  _G.eps  _H.eps  _I.eps  _K.eps  _L.eps  _M.eps  _N.eps  _P.eps  _Q.eps  _R.eps  _S.eps  _T.eps  _V.eps  _W.eps  _Y.eps
motif_studies/window2_index1/: ._.eps  A_.eps  C_.eps  D_.eps  E_.eps  F_.eps  G_.eps  H_.eps  I_.eps  K_.eps  L_.eps  M_.eps  N_.eps  P_.eps  Q_.eps  R_.eps  S_.eps  T_.eps  V_.eps  W_.eps  Y_.eps
notebooks/: download.html  download.ipynb  downloading_and_viewing.ipynb  examples.html  examples.ipynb  proof.html  proof.ipynb  walkthrough.ipynb
old/: old.requirements.txt  old.setup.py
pca_test/: iris.csv  pca.py  rcode_to_scop_class.csv  test.py
pdbs/: .~lock.nanosheet_v5_traj.pdb#  vmd.vmd
pdbs/reports/: nanosheet_birth_U7.tex  nanosheet_birth_U7_chain_U7.rcode.eps
src/backmap/: __init__.py  __main__.py  backmap.py  cli.py  local_colormaps.py  utils.py
templates/: latex_template.tex  postscript.ps  ramachandran.par  residue_vs_r.par  template.tex  template.vmd  template2.vmd
tests/: __init__.py  test_backmap.py
working_example/: backmap_example.py
(+915 files in other folders)
