[project]
name = "backmap"
version = "1.1.0"
description = "Shows protein backbone structures in compact graphical form using Ramachandran numbers"
readme = "README.rst"
authors = [
  {name = "Ranjan Mannige", email = "ranjanmannige@gmail.com"}
]
maintainers = [
  {name = "Ranjan Mannige", email = "ranjanmannige@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]

dependencies = [
  "matplotlib",
  "pandas",
  "typer",
  "setuptools_scm"
]
requires-python = ">= 3.8" # was 3.10

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project.urls]
Homepage = "https://github.com/ranjanmannige/backmap"
Documentation = "https://ranjanmannige.github.io/backmap/"
Repository = "https://github.com/ranjanmannige/backmap"
Issues = "https://github.com/ranjanmannige/backmap/issues"
#Changelog = "https://github.com/ranjanmannige/backmap/blob/main/changelog.md"

[project.scripts]
backmap = "backmap.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
