# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = backmap
summary = Shows protein backbone structures in compact graphical form using Ramachandran numbers
author = ranjanmannige
author-email = ranjanmannige@gmail.com
license = mit
url     = http://www.github.com/ranjanmannige/backmap
long-description = file: README.md
long_description_content_type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =  Development Status :: 3 - Alpha
               Programming Language :: Python
               Intended Audience :: Science/Research
               Operating System :: OS Independent
               Topic :: Scientific/Engineering :: Bio-Informatics
               Topic :: Scientific/Engineering :: Chemistry
               Topic :: Scientific/Engineering :: Visualization
               License :: OSI Approved :: MIT License

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = backmap.module:function
# For example:
# console_scripts =
#     fibonacci = backmap.skeleton:run
# as well as other entry_points.

[options]
py_modules  = backmap
zip_safe = False
packages = find:
include_package_data = True
use_scm_version = True
# Add here test requirements (semicolon-separated)
tests_require = matplotlib; nose
# Add here dependencies of your project (semicolon-separated)
install_requires = numpy; matplotlib
version_format = {tag}.dev{commitcount}+{gitsha}
setup_requires = setuptools_scm

[options.packages.find]
exclude =
    tests
    biopython
    Bio
    os
    sys

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
#addopts = -ra -q
test_suite=nose.collector
	
[aliases]
release = sdist bdist_wheel upload
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel


[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440-pre
versionfile_source = backmap/_version.py
versionfile_build = backmap/_version.py
tag_prefix =
parentdir_prefix = backmap-
